# state_estimate_filter_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
common_description/: common.xacro
config/: display_depth.rviz
include/image_histogram_picker/: image_histogram_picker.h
include/image_noise_mixer/: image_noise_mixer.h
include/image_zeropix_filler/: image_zeropix_filler.h
include/only_one_pix_pf_analizer/: only_one_pix_pf_analizer.h
include/phoxi_ocs/: fixed_phoxi_tf_broadcaster.h
include/probability_distribution/: depth_sensor_distribution.h  normal_distribution.h  probability_distribution.h
include/state_estimate_filter_ros/: kalman_filter.h  particle_filter.h  state_estimate_filter.h
kinectv2_description/: kinectv2.urdf.xacro
launch/: kinectv2_gazebo.launch  oneshot_calibrator.launch
src/: ar_pose_publisher.cpp  eigen_samples.cpp  fixed_phoxi_tf_broadcaster.cpp  fixed_phoxi_tf_broadcaster_node.cpp  kalman_filter.cpp  oneshot_calibrator.cpp  particle_filter.cpp  phoxi_pose_publisher.cpp  state_estimate_filter.cpp  state_estimate_filter_node.cpp
src/image_histogram_picker/: image_histogram_picker.cpp
src/image_noise_mixer/: image_noise_mixer.cpp
src/image_zeropix_filler/: image_zeropix_filler.cpp
src/only_one_pix_pf_analizer/: only_one_pix_pf_analizer.cpp
src/probability_distribution/: depth_sensor_distribution.cpp  normal_distribution.cpp  probability_distribution.cpp  probability_distribution_run.cpp
test/: probability_distribution.test  probability_distribution_test.cpp
urdf/: kinectv2.gazebo.macro.xacro_  kinectv2.gazebo.xacro_  kinectv2.urdf.xacro_
urdf/sensors/: kinectv2.gazebo.xacro
urdf/tools/: gzplugin_grasp_fix_2_grippers.gazebo.macro.xacro  gzplugin_grasp_fix_3_grippers.gazebo.macro.xacro
urdf/vs087/: vs087_and_kinectv2.gazebo.xacro  vs087_with_iai_gripper.gazebo.xacro  vs087_with_mhand.gazebo.xacro  vs087_with_mhand2.gazebo.xacro  vs087_with_robotiq.gazebo.xacro  vs087_with_tercero.gazebo.xacro
vs087_description/vs087/: vs087.urdf  vs087.urdf.xacro
vs087_description/vs087_and_kinectv2/: only_kinectv2.urdf.xacro  vs087_and_kinectv2.urdf.xacro
vs087_description/vs087_with_robotiq/launch/: test_vs087_with_robotiq.launch
vs087_description/vs087_with_tercero/: vs087_limited_joints_for_tercero.urdf.xacro  vs087_with_tercero.urdf.xacro
worlds/: box.world  cylinder.world
worlds/objects/unit_box/: model.sdf
worlds/objects/unit_cylinder/: model.sdf
