<?xml version="1.0"?>
<package format="2">
  <name>state_estimate_filter_ros</name>
  <version>0.0.0</version>
  <description>The state_estimate_filter_ros package</description>

  <maintainer email="p595201m@mail.kyutech.jp">MoriKen254</maintainer>

  <license>BSD</license>

  <author email="p595201m@mail.kyutech.jp">MoriKen254</author>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>eigen</depend>
  <depend>roscpp</depend>

  <build_depend>python</build_depend>
  <exec_depend>python</exec_depend>
  <build_depend>python-matplotlib</build_depend>
  <exec_depend>python-matplotlib</exec_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
